fix navigation on mobile sizing issues

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -356,7 +356,7 @@ html {
     }
 
     .cs-logo {
-      width: 40%;
+      width: 60%;
       max-width: (200/16rem);
       height: 100%;
       margin: 0 auto 0 0;
